--- a/templates/index.html
+++ b/templates/index.html
@@ -65,23 +65,10 @@
                 <li class="has-children">
                   <a href="#about-section" class="nav-link">About Us</a>
                   <ul class="dropdown">
-                    <li><a href="#team-section" class="nav-link">Team</a></li>
-                    <li><a href="#pricing-section" class="nav-link">Pricing</a></li>
-                    <li><a href="#faq-section" class="nav-link">FAQ</a></li>
-                    
                     <li><a href="#services-section" class="nav-link">Services</a></li>
                     <li><a href="#testimonials-section" class="nav-link">Testimonials</a></li>
-                    <li class="has-children">
-                      <a href="#">More Links</a>
-                      <ul class="dropdown">
-                        <li><a href="#">Menu One</a></li>
-                        <li><a href="#">Menu Two</a></li>
-                        <li><a href="#">Menu Three</a></li>
-                      </ul>
-                    </li>
                   </ul>
                 </li>
-                
                 
                 
                 <li><a href="#contact-section" class="nav-link">Contact</a></li>
@@ -91,8 +78,6 @@
               </ul>
             </nav>
           </div>
-
-
           <div class="col-6 d-inline-block d-xl-none ml-md-0 py-3" style="position: relative; top: 3px;"><a href="#" class="site-menu-toggle js-menu-toggle float-right"><span class="icon-menu h3"></span></a></div>
 
         </div>
@@ -106,15 +91,13 @@
 
       <div class="container">
         <div class="row align-items-center justify-content-center">
-
-          
           <div class="col-md-10 mt-lg-5 text-center">
             <div class="single-text owl-carousel">
               <div class="slide">
                 <h1 class="text-uppercase" data-aos="fade-up">Banking Solutions</h1>
                 <p class="mb-5 desc"  data-aos="fade-up" data-aos-delay="100">Streamline Your Financial Journey with Our Comprehensive Banking Solutions.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#contact-section" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                 </div>
               </div>
 
@@ -122,7 +105,7 @@
                 <h1 class="text-uppercase" data-aos="fade-up">Financing Solutions</h1>
                 <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Unlock Your Financial Potential with Our Tailored Financing Solutions.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#contact-section" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                 </div>
               </div>
 
@@ -130,7 +113,7 @@
                 <h1 class="text-uppercase" data-aos="fade-up">Savings Accounts</h1>
                 <p class="mb-5 desc" data-aos="fade-up" data-aos-delay="100">Maximize Your Savings with Our Reliable Savings Account.</p>
                 <div data-aos="fade-up" data-aos-delay="100">
-                  <a href="#" target="_blank" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
+                  <a href="#contact-section" class="btn  btn-primary mr-2 mb-2">Get In Touch</a>
                 </div>
               </div>
 
@@ -168,8 +151,6 @@
 
             <p>Cornerstone Bank: Redefining Banking Excellence. Experience personalized solutions and secure convenience with our innovative services. Trust our experienced team to guide you towards your financial goals. As a responsible corporate citizen, we support local communities and initiatives. Discover the difference and join us on your financial journey. Cornerstone Bank: Your trusted partner in banking</p>
 
-            
-            
           </div>
         </div>    
         
@@ -207,33 +188,20 @@
             <div class="mb-4">
               <h3 class="h3 mb-4 text-black">Banking Solutions Is Our Priority</h3>
               <p>Your Financial Success, Our Priority: Comprehensive Banking Solutions Tailored to You</p>
-              
             </div>
               
             <div class="mb-4">
               <ul class="list-unstyled ul-check success">
                 <li>Personalized Banking</li>
                 <li>Convenient Access</li>
-                <li>Secure Transactions</li>
+                <li>Secure Payments</li>
               </ul>
               
             </div>
-
-            
-            
-            
           </div>
         </div>
       </div>
     </div>
-
-    
-
-    
-   
-
-    
-
 
     <section class="site-section">
       <div class="container">
@@ -262,19 +230,19 @@
             
             <div class="owl-carousel slide-one-item-alt-text">
               <div>
-                <h2 class="section-title mb-3">01. Online Applications</h2>
-                <p>Open an account online or visit our branch to get started</p>
+                <h2 class="section-title mb-3">01. Interact with Chat Bot</h2>
+                <p>Answers any Banking related questions.</p>
 
                 <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
               </div>
               <div>
-                <h2 class="section-title mb-3">02. Get an approval</h2>
-                <p>Our team carefully reviews your submitted documents and information.</p>
+                <h2 class="section-title mb-3">02. Ask queries and steps to Banking process</h2>
+                <p>The Bot Guids through the whole Banking process detaily at each step</p>
                 <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
               </div>
               <div>
-                <h2 class="section-title mb-3">03. Card delivery</h2>
-                <p>After approval, your card is prepared for delivery</p>
+                <h2 class="section-title mb-3">03. Contact Us for more details</h2>
+                <p>Fill the details in the Contact form given below</p>
 
                 <p><a href="#" class="btn btn-primary mr-2 mb-2">Learn More</a></p>
               </div>
@@ -286,8 +254,6 @@
       </div>
     </section>
 
-    
-    
 
     <section class="site-section border-bottom bg-light" id="services-section">
       <div class="container">
@@ -446,83 +412,9 @@
         </div>
     </section>
 
-    <section class="site-section bg-light" id="pricing-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-12 text-center" data-aos="fade-up">
-            <h2 class="section-title mb-3">Pricing</h2>
-          </div>
-        </div>
-        <div class="row mb-5">
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="">
-            <div class="pricing">
-              <h3 class="text-center text-black">Basic</h3>
-              <div class="price text-center mb-4 ">
-                <span><span>750</span> / year</span>
-              </div>
-              <ul class="list-unstyled ul-check success mb-5">
-                
-                <li>Access to essential features and services.</li>
-                <li>Affordable monthly fee.</li>
-                <li class="remove">Expanded usage and functionality.</li>
-                <li class="remove">Extensive usage and functionality.</li>
-                <li class="remove">Premium-level customer support.</li>
-              </ul>
-              <p class="text-center">
-                <a href="#" class="btn btn-secondary">Buy Now</a>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4 pricing-popular" data-aos="fade-up" data-aos-delay="100">
-            <div class="pricing">
-              <h3 class="text-center text-black">Premium</h3>
-              <div class="price text-center mb-4 ">
-                <span><span>1500</span> / year</span>
-              </div>
-              <ul class="list-unstyled ul-check success mb-5">
-                
-                <li>Enhanced features and services.</li>
-                <li>Competitive monthly fee.</li>
-                <li>Ideal for individuals or small businesses with moderate requirements.</li>
-                <li>Extensive usage and functionality.</li>
-                <li class="remove">Premium-level customer support.</li>
-              </ul>
-              <p class="text-center">
-                <a href="#" class="btn btn-primary">Buy Now</a>
-              </p>
-            </div>
-          </div>
-
-          <div class="col-md-6 mb-4 mb-lg-0 col-lg-4" data-aos="fade-up" data-aos-delay="200">
-            <div class="pricing">
-              <h3 class="text-center text-black">Professional</h3>
-              <div class="price text-center mb-4 ">
-                <span><span>3000</span> / year</span>
-              </div>
-              <ul class="list-unstyled ul-check success mb-5">
-                
-                <li>Comprehensive features and services.</li>
-                <li>Extensive usage and functionality.</li>
-                <li>Higher monthly fee, offering premium benefits.</li>
-                <li>Recommended for businesses or individuals with advanced needs.</li>
-                <li>Premium-level customer support.</li>
-              </ul>
-              <p class="text-center">
-                <a href="#" class="btn btn-secondary">Buy Now</a>
-              </p>
-            </div>
-          </div>
-        </div>
-        
-        
-        
-      </div>
-    </section>
 
     <section class="site-section" id="about-section">
       <div class="container">
-
         <div class="row">
           <div class="col-lg-6 mb-5" data-aos="fade-up" data-aos-delay="">
             <figure class="circle-bg">
@@ -530,12 +422,7 @@
             </figure>
           </div>
           <div class="col-lg-5 ml-auto" data-aos="fade-up" data-aos-delay="100">
-            
-
             <div class="row">
-
-              
-              
               <div class="col-12 mb-4" data-aos="fade-up" data-aos-delay="">
                 <div class="unit-4 d-flex">
                   <div class="unit-4-icon mr-4 mb-3"><span class="text-primary flaticon-head"></span></div>
@@ -557,24 +444,12 @@
                 </div>
               </div>
             </div>
-
-
-            
           </div>
         </div>
-
-        
       </div>
     </section>
   
     
-    
-
-  
-
-   
-
-
     <section class="site-section bg-light" id="contact-section" data-aos="fade">
       <div class="container">
         <div class="row mb-5">
@@ -583,19 +458,16 @@
           </div>
         </div>
         <div class="row mb-5">
-          
-
-
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-room d-block h2 text-primary"></span>
-              <span>vellore ,katpadi</span>
+              <span>Vellore, Katpadi</span>
             </p>
           </div>
           <div class="col-md-4 text-center">
             <p class="mb-4">
               <span class="icon-phone d-block h2 text-primary"></span>
-              <a href="#">+1 8688839238</a>
+              <a href="#">+91 8688839238</a>
             </p>
           </div>
           <div class="col-md-4 text-center">
@@ -607,9 +479,6 @@
         </div>
         <div class="row">
           <div class="col-md-12 mb-5">
-
-            
-
             <form action="#" class="p-5 bg-white">
               
               <h2 class="h4 text-black mb-5">Contact Form</h2> 
@@ -653,8 +522,6 @@
                   <input type="submit" value="Send Message" class="btn btn-primary btn-md text-white">
                 </div>
               </div>
-
-  
             </form>
           </div>
           
@@ -670,7 +537,7 @@
             <div class="row">
               <div class="col-md-5">
                 <h2 class="footer-heading mb-4">About Us</h2>
-                <p>Welcome to Cornerstone Bank, your trusted banking partner committed to providing exceptional financial services and empowering your financial journey. With a legacy of 12 years in the banking industry, we have built a reputation for delivering excellence and meeting the diverse needs of our customers.</p>
+                <p>Welcome to Cornerstone Bank, your trusted banking partner committed to providing exceptional banking services and empowering your journey. We have built a reputation for delivering excellence and meeting the diverse needs of our customers.</p>
               </div>
               <div class="col-md-3 ml-auto">
                 <h2 class="footer-heading mb-4">Quick Links</h2>
@@ -709,8 +576,7 @@
             <div class="border-top pt-5">
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
               <p>Copyright &copy;
-                <script>document.write(new Date().getFullYear());</script> All rights reserved | This template is made
-                with <i class="icon-heart-o" aria-hidden="true"></i> by <a href="https://colorlib.com" target="_blank">Colorlib</a>
+                <script>document.write(new Date().getFullYear());</script> All rights reserved
               </p>
               <!-- Link back to Colorlib can't be removed. Template is licensed under CC BY 3.0. -->
         
@@ -747,8 +613,6 @@
   <script src="static/js/jquery.fancybox.min.js"></script>
   <script src="static/js/jquery.sticky.js"></script>
   <script src="static/js/isotope.pkgd.min.js"></script>
-
-  
   <script src="static/js/main.js"></script>
 
   
